fixed the fretboard frets overlapping the strings

--- a/client/src/scenes/visualizer/guitarFretboard/styles.css
+++ b/client/src/scenes/visualizer/guitarFretboard/styles.css
@@ -35,7 +35,8 @@
     z-index: 0;
     /* box-shadow: inset -1px 0px 11px 0px rgba(0, 0, 0, 0.75); */
     /* float: right; */
-    right: -3px;
+    /*right: -3px;  removed this in fixing the strings*/ 
+    right:0%; /* added this in fixing the strings */
 }
 
 .fret-wrapper:first-child .marker {
@@ -59,7 +60,7 @@
 
 
 .fret{
-    position: relative;
+    /* position: relative; removed this in fixing the strings */
     display: flex;
     flex-direction: column;
     align-items: center;
